<resources>
    <string name="app_name">EasyFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="over_popular_items">Over popular items</string>
    <string name="search_food">Search food</string>
    <string name="random_meal">Random meal</string>
    <string name="instructions">- Instructions:</string>
    <string name="search_meals">Search Meals</string>
</resources>