<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">
    
    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_header"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_home"
                    android:text="@string/home"
                    android:textSize="@dimen/_25ssp"
                    android:textColor="@color/accent"
                    android:textStyle="bold"
                    android:fontFamily="@font/myfont"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/img_search"
                    android:contentDescription="@string/search_food"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_search"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_what_would_..."
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/what_would_you_like_to_eat"
                android:fontFamily="@font/myfont"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintTop_toBottomOf="@id/linear_header"
                app:layout_constraintStart_toStartOf="@id/linear_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/random_meal_card"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_what_would_..."
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp">
                <ImageView
                    android:id="@+id/img_random_meal"
                    android:contentDescription="@string/random_meal"
                    android:scaleType="centerCrop"
                    android:background="@color/accent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_over_popular"
                android:fontFamily="@font/myfont"
                android:textColor="@color/black"
                android:text="@string/over_popular_items"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_18sdp"
                app:layout_constraintStart_toStartOf="@id/tv_what_would_..."
                app:layout_constraintTop_toBottomOf="@id/random_meal_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_view_meals_popular"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_98sdp"
                android:layout_marginStart="@dimen/_25sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_over_popular" />

            <TextView
                android:id="@+id/tv_categories"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/myfont"
                android:text="@string/categories"
                android:textStyle="bold"
                android:textSize="@dimen/_17ssp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/rec_view_meals_popular"
                app:layout_constraintStart_toStartOf="@id/rec_view_meals_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    android:orientation="vertical"
                    android:id="@+id/rec_view_categories"
                    android:scrollbars="none"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>